Fix menu styling on mobile

--- a/src/app.css
+++ b/src/app.css
@@ -77,6 +77,10 @@
 body {
 	background-color: var(--black);
 	letter-spacing: 0.14em;
+	max-width: 100%;
+	overflow-wrap: break-word;
+	word-wrap: break-word;
+	word-break: break-word;
 }
 
 h1 {
